# matt-stack

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: deployment-guide.md  ecosystem.md  plugin-guide.md
src/matt_stack/: __init__.py  __main__.py  cli.py  config.py  detected.py  presets.py  user_config.py
src/mattstack/: __init__.py  __main__.py  cli.py  config.py  presets.py  user_config.py
tasks/: todo.md
tests/: conftest.py  test_config.py  test_config_validation.py  test_nextjs_integration.py  test_post_processors.py  test_presets.py  test_user_config.py  test_yaml_config.py
tests/test_auditors/: test_dependencies.py  test_endpoints.py  test_html_report.py  test_plugins.py  test_quality.py  test_quality_extended.py  test_report.py  test_tests_auditor.py  test_types.py  test_vulnerabilities.py
tests/test_commands/: test_add.py  test_audit.py  test_cli.py  test_client.py  test_completions.py  test_context.py  test_dev.py  test_env.py  test_init.py  test_lint.py  test_test_runner.py  test_upgrade.py  test_version.py
tests/test_generators/: test_backend_only.py  test_base.py  test_frontend_only.py  test_fullstack.py  test_ios.py
tests/test_parsers/: test_dependencies.py  test_django_routes.py  test_nextjs_routes.py  test_parser_utils.py  test_python_schemas.py  test_test_files.py  test_typescript_types.py  test_zod_schemas.py
tests/test_templates/: test_deploy_templates.py  test_new_deploy_templates.py  test_templates.py
tests/test_utils/: test_docker.py  (+1 more)
(+133 files in other folders)
