[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "matt-stack"
version = "0.1.0"
description = "CLI to scaffold fullstack monorepos from battle-tested boilerplates"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Matt Jaikaran", email = "info@mattjaikaran.com" },
]
keywords = ["cli", "scaffold", "monorepo", "django", "react", "boilerplate"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "questionary>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
matt-stack = "matt_stack.cli:app"
ms = "matt_stack.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/matt_stack"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
